--- a/01-yad/share/applications/sparky-aptus-appcenter.desktop
+++ b/01-yad/share/applications/sparky-aptus-appcenter.desktop
@@ -15,7 +15,7 @@ Comment[pl]=Utrzymuj system zaktualizowany i czysty, instaluj i usuwaj pakiety
 Comment[pt_BR]=Mantenha seu sistema atualizado e limpo, instale e remova pacotes
 Comment[pt_PT]=Mantenha seu sistema atualizado e limpo, instale/remova pacotes
 Comment[ru]=Поддержка системы в актуальном состоянии, чистка, установка и удаление пакетов
-Exec=spsudo /usr/bin/sparky-aptus-appcenter
+Exec=remsu /usr/bin/sparky-aptus-appcenter
 Icon=sparky-aptus-appcenter
 Terminal=false
 MultipleArgs=false
